--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@typegoose/typegoose": "^11.7.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
