Add Swagger & Refactor environment variables

--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
+# the port of the app
 PORT=2000
-mongoosedbConnection=mongodb://127.0.0.1:27017/shop
+
+# mongodb connection string
+DB_CONNECTION=mongodb://127.0.0.1:27017/shop
+
+# api prefix
+APP_ENDPOINT_PREFIX=api
+
+# swagger setup path
+SWAGGER_SETUP_PATH=swagger
+SWAGGER_UI_TITLE=我的文档
+SWAGGER_UI_DESC=文档描述
