--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=development nest start",
-    "start:dev": "cross-env NODE_ENV=development & nest start --watch",
-    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "start": "cross-env NODE_ENV=development nest start -b swc",
+    "start:dev": "pnpm run start --watch",
+    "start:debug": "pnpm run start:dev --debug",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -45,6 +45,8 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.96",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.8.10",
