--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@root": ["/"],
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@modules/*": ["./src/modules/*"]
     }
   }
 }
