--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@typegoose/typegoose": "^11.7.0",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
